@@ -6,40 +6,39 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
+import java.util.Collections;
 import java.util.Map;
-
 @ControllerAdvice
 public class GlobalExceptionHandler {
 
-    // User / Business errors (login, register, paste not found)
     @ExceptionHandler(RuntimeException.class)
     public ResponseEntity<Map<String, String>> handleRuntime(RuntimeException ex) {
+        // Use HashMap or check for null message because Map.of fails on nulls
+        String message = (ex.getMessage() != null) ? ex.getMessage() : "Internal Server Error";
+
         return ResponseEntity
                 .status(HttpStatus.BAD_REQUEST)
-                .body(Map.of("error", ex.getMessage()));
+                .body(Collections.singletonMap("error", message));
     }
 
-    // 404 – Resource not found
     @ExceptionHandler(NotFoundException.class)
     public ResponseEntity<Map<String, String>> handleNotFound(NotFoundException ex) {
         return ResponseEntity
                 .status(HttpStatus.NOT_FOUND)
-                .body(Map.of("error", ex.getMessage()));
+                .body(Collections.singletonMap("error", ex.getMessage()));
     }
 
-    //  Validation errors (@Valid)
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<Map<String, String>> handleValidation(MethodArgumentNotValidException ex) {
         return ResponseEntity
                 .status(HttpStatus.BAD_REQUEST)
-                .body(Map.of("error", "Validation failed"));
+                .body(Map.of("error", "Validation failed")); // Hardcoded string is safe here
     }
 
-    //  Fallback – unexpected errors
     @ExceptionHandler(Exception.class)
     public ResponseEntity<Map<String, String>> handleAll(Exception ex) {
         return ResponseEntity
                 .status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .body(Map.of("error", "Something went wrong"));
+                .body(Map.of("error", "Something went wrong")); // Hardcoded string is safe here
     }
 }
